--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 .header {
-    background-color: crimson;
+    background: linear-gradient(to bottom, #dc143c, #c60808);
+
     height: 54px;
     width: 100%;
 
@@ -15,6 +16,8 @@
         text-shadow: 1px 0px 2px rgba(150, 150, 150, 1);
         border: none;
         margin-left: 40px;
+        text-transform: uppercase;
+        font-size: 18px;
     }
     .linkHeader:hover {
         background-color: #656;
@@ -29,10 +32,11 @@
 
 .subHeader {
     height: 25px;
-    background-color: #666;
+    background: linear-gradient(to bottom, #668, #666);
+
 
     p {
-        font-weight: normal;
+        font-weight: bold;
         width: 95%;
         color: #fff;
         text-align: left;
