--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 .header {
     background: linear-gradient(to bottom, #dc143c, #c60808);
 
@@ -7,7 +8,6 @@
 
     .linkHeader {
         color: #ffffff;
-        font: 1.4em 'Open Sans Condensed', sans-serif;
         position: relative;
         border-radius: 0.3em;
         padding: 0.1em 0.5em 0.0em 0.5em;
@@ -18,16 +18,32 @@
         margin-left: 40px;
         text-transform: uppercase;
         font-size: 18px;
+        font: 1.1em 'Open Sans Condensed', sans-serif;
+        
+        font-style: normal;
     }
     .linkHeader:hover {
-        background-color: #656;
+        background-color: #990000;
     }
     @media (max-width: 1200px) {
         .linkHeader{
             display: none;
         }
+
+        .fa-bars{
+            position: relative;
+            display: inline;
+            font-size: 40px;
+            color: whitesmoke;
+            align-items: end;
+            align-content: end;
+            align-self: flex-end;
+        }
     }
 
+}
+.fa-bars{
+    display: none;
 }
 
 .subHeader {
@@ -36,7 +52,9 @@
 
 
     p {
-        font-weight: bold;
+        font-family: "Share Tech Mono", monospace;
+        font-weight: 400;
+        font-style: normal;
         width: 95%;
         color: #fff;
         text-align: left;
