--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,17 @@
 
+body {
+    margin: 0;
+    padding: 0;
+}
+
 .header {
     background: linear-gradient(to bottom, #dc143c, #c60808);
-
+    
     height: 54px;
     width: 100%;
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .linkHeader {
         color: #ffffff;
@@ -19,7 +26,6 @@
         text-transform: uppercase;
         font-size: 18px;
         font: 1.1em 'Open Sans Condensed', sans-serif;
-        
         font-style: normal;
     }
     .linkHeader:hover {
@@ -31,17 +37,69 @@
         }
 
         .fa-bars{
-            position: relative;
             display: inline;
             font-size: 40px;
             color: whitesmoke;
-            align-items: end;
-            align-content: end;
-            align-self: flex-end;
+            margin-right: 20px;
+            cursor: pointer;
+            
+        }
+        .fa-bars:hover{
+            transition:  0.3s ease;
+            transform: scale(1.1);
         }
     }
 
 }
+
+.sidebar{
+    position: fixed;
+    right:-250px;
+    top:0;
+    width: 250px;
+    height: 100%;
+    background: linear-gradient(to left, #dc143c, #c60808);;
+    overflow-y: hidden;
+    transition: right 0.3s ease;
+    padding-top: 60px;
+}
+
+ul{
+    list-style-type: none;
+    text-transform: uppercase;
+}
+li{
+    background-color: #575757;
+    margin: 5px;
+    border-radius: 5px;;
+}
+
+.sidebar a {
+    padding: 10px 15px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidebar li:hover {
+    background-color: crimson;
+    transform: scale(1.1);
+    transition: 0.2s;
+}
+
+.hambuguer {
+    font-size: 40px;
+    color: whitesmoke;
+    margin-right: 20px;
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    z-index: 1001; /* Garante que o ícone fique sobre a sidebar */
+}
+
 .fa-bars{
     display: none;
 }
@@ -58,9 +116,8 @@
         width: 95%;
         color: #fff;
         text-align: left;
-        height: auto;
-        padding: 0.2em 0em 0.2em 2.5em;
-        margin: auto;
+        margin-left: 110px;
+        margin-top: auto;
         min-width: 769px;
         max-width: 1035px;
     }
