--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,8 @@
-
+@import url("./header.css");
+@import url("./sidebar.css");
+@import url("./subheader.css");
 body {
     margin: 0;
     padding: 0;
 }
 
-.header {
-    background: linear-gradient(to bottom, #dc143c, #c60808);
-    
-    height: 54px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    .linkHeader {
-        color: #ffffff;
-        position: relative;
-        border-radius: 0.3em;
-        padding: 0.1em 0.5em 0.0em 0.5em;
-        text-decoration: none;
-        border: 0.05em solid #990000;
-        text-shadow: 1px 0px 2px rgba(150, 150, 150, 1);
-        border: none;
-        margin-left: 40px;
-        text-transform: uppercase;
-        font-size: 18px;
-        font: 1.1em 'Open Sans Condensed', sans-serif;
-        font-style: normal;
-    }
-    .linkHeader:hover {
-        background-color: #990000;
-    }
-    @media (max-width: 1200px) {
-        .linkHeader{
-            display: none;
-        }
-
-        .fa-bars{
-            display: inline;
-            font-size: 40px;
-            color: whitesmoke;
-            margin-right: 20px;
-            cursor: pointer;
-            
-        }
-        .fa-bars:hover{
-            transition:  0.3s ease;
-            transform: scale(1.1);
-        }
-    }
-
-}
-
-.sidebar{
-    position: fixed;
-    right:-250px;
-    top:0;
-    width: 250px;
-    height: 100%;
-    background: linear-gradient(to left, #dc143c, #c60808);;
-    overflow-y: hidden;
-    transition: right 0.3s ease;
-    padding-top: 60px;
-}
-
-ul{
-    list-style-type: none;
-    text-transform: uppercase;
-}
-li{
-    background-color: #575757;
-    margin: 5px;
-    border-radius: 5px;;
-}
-
-.sidebar a {
-    padding: 10px 15px;
-    text-decoration: none;
-    font-size: 18px;
-    color: #fff;
-    display: block;
-    transition: 0.3s;
-}
-
-.sidebar li:hover {
-    background-color: crimson;
-    transform: scale(1.1);
-    transition: 0.2s;
-}
-
-.hambuguer {
-    font-size: 40px;
-    color: whitesmoke;
-    margin-right: 20px;
-    cursor: pointer;
-    position: absolute;
-    right: 20px;
-    top: 10px;
-    z-index: 1001; /* Garante que o ícone fique sobre a sidebar */
-}
-
-.fa-bars{
-    display: none;
-}
-
-.subHeader {
-    height: 25px;
-    background: linear-gradient(to bottom, #668, #666);
-
-
-    p {
-        font-family: "Share Tech Mono", monospace;
-        font-weight: 400;
-        font-style: normal;
-        width: 95%;
-        color: #fff;
-        text-align: left;
-        margin-left: 110px;
-        margin-top: auto;
-        min-width: 769px;
-        max-width: 1035px;
-    }
-}
-
-.FatecLogo {
-    height: 40px;
-    width: 144px;
-    margin-left: 110px;
-    margin-top: 5px;
-}
